docs/admission-controller/version-1.36/modules/en/pages/quick-start.adoc
include::partial$variables.adoc[]

= Quick start
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-05-14
:page-revdate: {revdate}
:description: Understand the {admc-name} stack by learning how to deploy and manage its main components, including PolicyServers and ClusterAdmissionPolicy resources.
:doc-persona: ["kubewarden-all"]
:doc-topic: ["quick-start"]
:doc-type: ["tutorial"]
:keywords: ["{admc-name}", "installation", "quick start", "policyserver", "clusteradmissionpolicy", "admissionpolicy"]
:sidebar_label: Quick start
:sidebar_position: 20
:current-version: {page-origin-branch}

++++
<head>
<script async src="https://artifacthub.io/artifacthub-widget.js"></script>
</head>
++++

The {admc-name} stack comprises:

* One or more {cluster-admission-policy} resources: this defines policies
  for Kubernetes clusters.
* One or more {policy-server} resources: representing a deployment of a
  {admc-short-name}
  `PolicyServer`. The {admc-short-name} `PolicyServer` loads and evaluates your
  administrator's policies.
* One or more {admission-policy} resources: policies for a defined namespace.
* A deployment of a `kubewarden-controller`: this controller monitors the
  {cluster-admission-policy} resources and interacts with the {admc-short-name}
  {policy-server} components.

[TIP]
====

{admc-short-name} describes its Kubernetes Custom Resource Definitions (CRDs)
xref:reference/CRDs.adoc[here].

{admc-short-name} CRDs mentioned in this tutorial and in the rest of
documentation have short names, which are easier to use. These are the short
names for the CRDs:

[cols="1,1"]
|===
| Resource | shortName

| AdmissionPolicies
| *ap*

| ClusterAdmissionPolicies
| *cap*

| AdmissionPolicyGroups
| *apg*

| ClusterAdmissionPolicyGroups
| *capg*

| PolicyServers
| *ps*

|===

====


[#installation]
== Installation

[IMPORTANT]
.Authentication
====

:gh-pat-url: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens

You can retrieve {admc-short-name} policies from the GitHub container registry at
https://ghcr.io. You need authentication to use the repository with the
{admc-short-name} CLI, a {gh-pat-url}[GitHub personal access token] (PAT). Their
documentation guides you through creating one if you haven't already done so.
Then you authenticate with a command like:

[subs="+attributes",console]
----
echo $PAT | docker login ghcr.io --username <my-gh-username> --password-stdin
----

====


Deploy the {admc-short-name} stack using `helm` charts as follows:

[subs="+attributes",console]
----
helm repo add kubewarden https://charts.kubewarden.io
----

[subs="+attributes",console]
----
helm repo update kubewarden
----

Install the following Helm charts in the `kubewarden` namespace in your
Kubernetes cluster:

* `kubewarden-crds`, which registers the {cluster-admission-policy},
  {admission-policy} and {policy-server} Custom Resource Definitions. Also, the
  {policy-report} Custom Resource Definitions used by the audit scanner.
* `kubewarden-controller`, which installs the {admc-short-name} and the
  audit scanner
+
[NOTE]
====

If you need to disable the audit scanner component check the audit scanner
installation xref:howtos/audit-scanner.adoc[documentation page].

====
+
* `kubewarden-defaults`, which creates a `PolicyServer` resource named
  `default`. It can also install a set of recommended policies to secure your
  cluster by enforcing well known best practices.

[subs="+attributes",console]
----
helm install --wait -n kubewarden --create-namespace kubewarden-crds kubewarden/kubewarden-crds
----

[subs="+attributes",console]
----
helm install --wait -n kubewarden kubewarden-controller kubewarden/kubewarden-controller
----

[subs="+attributes",console]
----
helm install --wait -n kubewarden kubewarden-defaults kubewarden/kubewarden-defaults
----

The default configuration values are sufficient for most deployments. The
https://charts.kubewarden.io/#configuration[documentation] describes all the
options.

== Main components

{admc-short-name} has three main components which you interact with:

* The {policy-server}
* The {cluster-admission-policy}
* The {admission-policy}

=== `PolicyServer`

The `kubewarden-controller` manages a {admc-short-name} `PolicyServer`. You can
deploy multiple {policy-server}s in the same Kubernetes cluster.

A `PolicyServer` validates incoming requests by executing {admc-short-name}
policies against them.

This is the default `PolicyServer` configuration:

[subs="+attributes",yaml]
----
apiVersion: policies.kubewarden.io/v1
kind: PolicyServer
metadata:
  name: reserved-instance-for-tenant-a
spec:
  image: ghcr.io/kubewarden/adm-controller/policy-server:v1.36.0
  replicas: 2
  serviceAccountName: ~
  env:
    - name: KUBEWARDEN_LOG_LEVEL
      value: debug
----

[NOTE]
====

Check the
https://github.com/kubewarden/adm-controller/policy-server/pkgs/container/adm-controller%2Fpolicy-server[latest
released `PolicyServer` version] and change the tag to match.

====

Overview of the attributes of the `PolicyServer` resource:

[cols="^,,"]
|===
| Required | Placeholder | Description

| Y
| `image`
| The name of the container image

| Y
| `replicas`
| The number of desired instances

| N
| `serviceAccountName`
| The name of the `ServiceAccount` to use for the `PolicyServer` deployment. If
  there is no provided value, the default `ServiceAccount` from the installation namespace, of `kubewarden-controller`, gets used.

| N
| `env`
| The list of environment variables

| N
| `annotations`
| The list of annotations

|===

Changing any of these attributes causes a `PolicyServer` deployment with the
new configuration.

=== ClusterAdmissionPolicy

The {cluster-admission-policy} resource is the core of the {admc-short-name}
stack. It defines how policies evaluate requests.

Enforcing policies is the most common operation which a Kubernetes
administrator performs. You can declare as many policies as you want, each
targets one or more Kubernetes resources (that is, `pods`, `Custom Resource`
and others). You also specify the type of operations applied to targeted
resources. The operations available are `CREATE`, `UPDATE`, `DELETE` and
`CONNECT`.

Default {cluster-admission-policy} configuration:

[subs="+attributes",yaml]
----
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: psp-capabilities
spec:
  policyServer: default
  module: registry://ghcr.io/kubewarden/policies/capabilities-psp:v1.0.10
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: true
  settings:
    allowed_capabilities:
      - CHOWN
    required_drop_capabilities:
      - NET_ADMIN
----

Overview of the attributes of the {cluster-admission-policy} resource:

[cols="^,,"]
|===
| Required | Placeholder | Description

| N
| `policy-server`
| Identifies an existing `PolicyServer` object. Only
  this `PolicyServer` instance serves the policy. The policy server named `default` serves a {cluster-admission-policy} without an explicit `PolicyServer`.

| Y
| `module`
| The location of the {admc-short-name} policy. The following schemes are allowed:

| N
|
| - `registry`: Policy download from an
    https://github.com/opencontainers/artifacts[OCI artifacts] compliant
    container registry. Example: `registry://<OCI registry/policy URL>`

| N
|
| - `http`, `https`: Policy download from a regular HTTP(s) server.
    Example: `\https://<website/policy URL>`

| N
|
| - `file`: Load the policy from a file in the computer file system.
    Example: `\file:///<policy WASM binary full path>`

| Y
| `resources`
| The Kubernetes resources evaluated by the policy

| Y
| `operations`
| What operations for the previously given types should be forwarded to this
  admission policy by the API server for evaluation.

| Y
| `mutating`
| Set this boolean value `true` for policies that can mutate
  incoming requests

| N
| `settings`
| A free-form object that contains the policy configuration values

| N
| `failurePolicy`
| The action to take if the request evaluated by a policy results in an error.
  The following options are allowed:

| N
|
| - `Ignore`: ignore an error calling the webhook and the API request
    continues.

| N
|
| - `Fail`: an error calling the webhook causes the admission to fail
    and API request rejection.
|===

[NOTE]
====

The controller registers the {cluster-admission-policy} resources `*` webhook
`scope`. This means that registered webhooks forward all requests matching the
given `resources` and `operations`, either namespaced or cluster-wide
resources.

====


=== AdmissionPolicy

{admission-policy} is a namespace-wide resource. The policy processes only the
requests that are targeting the Namespace with the {admission-policy} defined.
Other than that, there are no functional differences between the
{admission-policy} and {cluster-admission-policy} resources.

[IMPORTANT]
====

{admission-policy} requires Kubernetes 1.21.0 or greater. This is because
{admc-short-name} uses the `kubernetes.io/metadata.name` label, introduced in
Kubernetes 1.21.0

====

The complete documentation of these Custom Resources is xref:/reference/CRDs.adoc[here].

[#_example_enforce_your_first_policy]
== Example: Enforce your first policy

We will use the https://github.com/kubewarden/pod-privileged-policy[`pod-privileged`] policy.
We want to prevent the creation of privileged containers inside our Kubernetes cluster by enforcing this policy.

Let's define a {cluster-admission-policy} to do that:

[subs="+attributes",console]
----
kubectl apply -f - <<EOF
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: privileged-pods
spec:
  module: registry://ghcr.io/kubewarden/policies/pod-privileged:v0.2.2
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
EOF
----

This produces the following output:

[subs="+attributes",console]
----
clusteradmissionpolicy.policies.kubewarden.io/privileged-pods created
----

After instantiating a {cluster-admission-policy}, the status becomes `pending`,
and it forces a rollout of the targeted `PolicyServer`. In the example, it's
the `PolicyServer` named `default`. You can monitor the rollout by running the
following command:

[subs="+attributes",console]
----
kubectl get clusteradmissionpolicy.policies.kubewarden.io/privileged-pods
----

You should see the following output:

[subs="+attributes",console]
----
NAME              POLICY SERVER   MUTATING   STATUS
privileged-pods   default         false      pending
----

Once the new policy is ready, the `kubewarden-controller`
registers a
https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.33/#validatingwebhookconfiguration-v1-admissionregistration-k8s-io[ValidatingWebhookConfiguration]
object to serve it.

The {cluster-admission-policy} status becomes `active` once the Deployment
completes for every `PolicyServer` instance. Show
{validating-webhook-configuration}s with the following command:

[subs="+attributes",console]
----
kubectl get validatingwebhookconfigurations.admissionregistration.k8s.io -l kubewarden
----

You should see the following output:

[subs="+attributes",console]
----
NAME                          WEBHOOKS   AGE
clusterwide-privileged-pods   1          9s
----

Once the {cluster-admission-policy} is active and the
{validating-webhook-configuration} registers, you can test the policy.

First, you can create a Pod with a Container _not_ in `privileged` mode:

[subs="+attributes",console]
----
kubectl apply -f - <<EOF
apiVersion: v1
kind: Pod
metadata:
  name: unprivileged-pod
spec:
  containers:
    - name: nginx
      image: nginx:latest
EOF
----

This produces the following output:

[subs="+attributes",console]
----
pod/unprivileged-pod created
----

The Pod is successfully created.

Now, you can create a Pod with at least one Container `privileged` flag:

[subs="+attributes",console]
----
kubectl apply -f - <<EOF
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
          privileged: true
EOF
----

The policy denies creation of the Pod and you should see the following message:

[subs="+attributes",console]
----
Error from server: error when creating "STDIN": admission webhook "clusterwide-privileged-pods.kubewarden.admission" denied the request: Privileged container is not allowed
----

[NOTE]
====

Both examples didn't define a `namespace`, which means the `default` namespace
was the target. However, as you could see in the second example, the policy is
still applied. As stated previously, this is due to the scope being cluster-wide and
not targeting a specific namespace.

====


== Uninstall

You can remove the resources created by uninstalling the `helm` charts as
follows:

[subs="+attributes",console]
----
helm uninstall --namespace kubewarden kubewarden-defaults
----

[subs="+attributes",console]
----
helm uninstall --namespace kubewarden kubewarden-controller
----

[subs="+attributes",console]
----
helm uninstall --namespace kubewarden kubewarden-crds
----

After removal of the `helm` charts remove the Kubernetes namespace used to
deploy the {admc-short-name} stack:

[subs="+attributes",console]
----
kubectl delete namespace kubewarden
----

[CAUTION]
====

{admc-short-name} contains a helm pre-delete hook that removes all
`PolicyServer`s and `kubewarden-controller`s. Then the
`kubewarden-controller` deletes all resources, so it's important that
`kubewarden-controller` is running when helm uninstall executes.

====


{admc-short-name} deletes {validating-webhook-configuration}s and
{mutating-webhook-configuration}s. Check this with:

[subs="+attributes",console]
----
kubectl get validatingwebhookconfigurations.admissionregistration.k8s.io -l "kubewarden"
----

[subs="+attributes",console]
----
kubectl get mutatingwebhookconfigurations.admissionregistration.k8s.io -l "kubewarden"
----

If these resources aren't automatically removed, remove them manually using the
following command:

[subs="+attributes",console]
----
kubectl delete -l "kubewarden" validatingwebhookconfigurations.admissionregistration.k8s.io
----

[subs="+attributes",console]
----
kubectl delete -l "kubewarden" mutatingwebhookconfigurations.admissionregistration.k8s.io
----

== Wrapping up

{cluster-admission-policy} is the core resource that a cluster operator has to
manage. The `kubewarden-controller` module automatically takes care of the
configuration for the rest of the resources needed to run the policies.

== What's next?

Now, you are ready to deploy {admc-short-name}! Have a look at the policies on
https://artifacthub.io/packages/search?kind=13[artifacthub.io], on
https://github.com/topics/kubewarden-policy[GitHub], or reuse existing Rego
policies as shown in the xref:tutorials/writing-policies/rego/01-intro-rego.adoc[following
chapters].

.Full list of available policies on ArtifactHub
[%collapsible,subs="+macros"]
======

++++

<div class="artifacthub-widget-group" data-url="https://artifacthub.io/packages/search?kind=13&sort=relevance&page=1" data-theme="light" data-header="false" data-stars="false" data-color="#fe7c3f" data-responsive="true" data-loading="true"></div>

++++

======
